--- a/about.html
+++ b/about.html
@@ -13,12 +13,12 @@ title: "About"
 	alt="An aerofoil undergoing large amplitude sinusoidal heave in an invicid domain modelled using
 	semi-Lagrangain method."/>
   
-  <p>Modern engineering is increasingly concerned with the non-linear aerodynamics of wings. Problem is, whether you're trying to investigate the flight of a bumble-bee or the aeroelastics of a flexible aeroplane, CFD is slow. Prohibatively slow. And that's before you've found someone with the neccesary expertise to produce a meaningful case. An undergraduate engineer is going to struggle. </p>
+  <p>Modern engineering is increasingly concerned with the non-linear aerodynamics of wings. Problem is, whether you're trying to investigate the flight of a bumble-bee or the aeroelastics of a flexible aeroplane, CFD is slow. Prohibitively slow. And that's before you've found someone with the necessary expertise to produce a meaningful case. An undergraduate engineer is going to struggle. </p>
   
-  <p>The idea then is to explicity model the important phenomena within a domain, rather
-  than to implicity model everything as occurs in CFD. This means that wings can be treated
-  as thin and viscosity negleted. The lack of viscosity leads to the pickle of how to shed 
-  vorticity, such that a wing can create lift. For many kinematics, the Kutta-Joukowski theorum
+  <p>The idea then is to explicitly model the important phenomena within a domain, rather
+  than to implicitly model everything as occurs in CFD. This means that wings can be treated
+  as thin and viscosity neglected. The lack of viscosity leads to the pickle of how to shed 
+  vorticity, such that a wing can create lift. For many kinematics, the Kutta-Joukowski theorem
   suffices. But the most interesting cases, we're interested in the leading edge vortex, its
   formation and how it affects the lift produced by a wing. LEV shedding is anticipated using 
   leading shedding criterion.
@@ -31,8 +31,8 @@ title: "About"
    
    Publications:
    <ul>
-      <li>Theoretical and Compuational Studies of a Rectangular Finite Wing Oscillating in Pitch and Heave, H.J.A. Bird & K. Ramesh, 6th European Conference on Computational Mechanics (ECCM 6) 7th European Conference on Computational Fluid Dynamics (ECFD 7), 2018</li>
-      <li>A Geometrically Non-Linear Time-Domain Unsteady Lifting-Line Theory, H.J.A. Bird, S. Otomo, K. Ramesh & I.M. Viola, AIAA Scitech 2019 Forum, San Diego</li>
+      <li><a href="http://www.eccm-ecfd2018.org/admin/files/filePaper/p1343.pdf">Theoretical and Computational Studies of a Rectangular Finite Wing Oscillating in Pitch and Heave</a>, H.J.A. Bird & K. Ramesh, 6th European Conference on Computational Mechanics (ECCM 6) 7th European Conference on Computational Fluid Dynamics (ECFD 7), 2018.</li>
+      <li><a href="https://doi.org/10.2514/6.2019-1377">A Geometrically Non-Linear Time-Domain Unsteady Lifting-Line Theory</a>, H.J.A. Bird, S. Otomo, K. Ramesh & I.M. Viola, AIAA Scitech 2019 Forum, San Diego.</li>
    </ul>
    
    Teaching (assistant):
