--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: "About"
 
 <!-- You can edit this whole page, remove it, or use it as basis for any non-post pages you have. -->
 <section class="content">
-  <h1>{{ site.name }}</h1>
+  <h1>About me</h1>
 
   <p>I'm Hugh Bird, a post-graduate research student at the University of Glasgow working with Dr. Ramesh on low order aerodynamics.</p>
   
