--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 ---
 layout: layout
-title: "Posts"
+title: "Blog"
 ---
 
 <section class="content">
-  <ul class="listing">
+	<h1>Blog</h1>
+	<ul class="listing">
     {% for post in site.posts %}
-      {% unless post.draft %}
-      <li>
-        <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
-      </li>
-      {% endunless %}
+		{% unless post.draft %}
+		<li>
+			<span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+		</li>
+		{% endunless %}
     {% endfor %}
-  </ul>
+	</ul>
 </section>
