Add Bedlam review. Flesh out Red October

--- a/fictionreview.html
+++ b/fictionreview.html
@@ -7,6 +7,8 @@ title: "Book review"
 <section class="content">
 	<h1>Fiction review</h1>
 	
+	<p><b>Bedlam</b> (Christopher Brookmyre) The joy of Brookmyre is his ability to insert the elusive triple Red Herring plot device into a book based on the reader's mildly shameful interests - in this case, computer games. Despite on the lookout for the first hint of slippery plot twists, I was none the less taken by surprise. <i>Bedlam</i> isn't quite peak Brookmyre, but it is a good display of what he is capable of writing.</p>
+	
 	<p><b>The Colour of Magic</b> (Terry Pratchett) Both a mockery and a celebration of the Dungeons and Dragons playing type. Set in a fantasy world with magical restrictions as perverse as the laws of physics, Pratchett delivers a story which seems to be largely a vehicle by which he can introduce and then discard entertaining ideas as suits his whim. Enjoyable for those that enjoy Terry Pratchett.</p>
 	
 	<p><b>Tess of the d'Urbervilles</b> (Thomas Hardy) A series of mundane cruelties. The potency of the original story has perhaps been lost with the passing of time. A good book, but not enjoyable.</p>
@@ -59,7 +61,7 @@ title: "Book review"
 	<p><b>Be My Enemy</b>(Christopher Brookmyre)   </p>
 	<p><b>The Sacred Art of Stealing</b>(Christopher Brookmyre)   </p>
 	-->
-	<p><b>The Hunt for Red October</b> (Tom Clancy) A excellent book ruined by a merely fantastic film. </p>
+	<p><b>The Hunt for Red October</b> (Tom Clancy) A excellent book ruined by a merely fantastic film. Sufficiently full of important detail that by the time the reader has finished the book, the reader has forgotten the beginning and can start afresh.   </p>
 	<p><b>Patriot Games</b> (Tom Clancy) It is said that Americans have a fascination with the British Royal Family. The beginning of <i>Patriot Games</i> consequently feels a little like the when the Simpsons encounter the Queen - painfully forced. Whilst the book is ultimately forgettable, it is at least passingly entertaining. </p>
 <!--	<p><b>The Cardinal of the Kremlin</b> (Tom Clancy)  </p> -->
 	<p><b>Clear and Present Danger</b> (Tom Clancy) Better than the film - thank goodness. And the plot is completely different to the film too.  </p>
