Correct Kinky Boots theatre

--- a/artsreview.html
+++ b/artsreview.html
@@ -21,7 +21,7 @@ title: "Arts review"
 	<p><h2>Man of La Mancha</h2><i>English National Opera, London Coliseum, London, 05/06/2019</i>
 	<br> Oddly, so many musicals seem to compromise on the quality of the music and singing. Not this. Nor does the cast lack acting skill. Whilst Kelsey Grammar as Don Quixote managed to play with the emotions, it was Cassidy Janson as Dulcinea who exceeded what I thought was possible with respect to sticking to character whilst singing. Fantastic. </p>
 	
-	<p><h2>Kinky Boots</h2><i>National Theatre Productions, National Theatre, London, 13/05/2019</i>
+	<p><h2>Kinky Boots</h2><i>King's Theatre, Glasgow, 13/05/2019</i>
 	<br> A story, the trajectory of which knows no hiccup or speedbump that lasts longer than a single song, sung through the noses of actors trying to navigated a spectacle worthy set. Relies on bright lights and loud noises to dazzle the audience. Disappointing. </p>
 	
 	<p><h2>Top Girls</h2><i>National Theatre Productions, National Theatre, London, 20/04/2019</i>
