Arts:Limbo & MidsummerNightsDream

--- a/artsreview.html
+++ b/artsreview.html
@@ -8,6 +8,15 @@ title: "Arts review"
 
 	<h1>Arts review</h1>
 	
+	<p><h2>A Midsummer Night's Dream</h2>
+	<i>Chapterhouse Theatre Company, Pollock House, Glasgow, 15/08/19 </i>
+	<br>For a one evening event, Chapterhouse managed to attract a decent crowd to Pollock house to sit on fold up chairs and picnic rugs. It was fun. The eight person troupe thankfully didn't attempt any modern reimagining of Shakespeare, and made it suitably coarse for the occasion. And it didn't rain. Sure, any of the music played through loudspeakers tended to drown out the unamplified actors and Oberon wasn't as he is in my imagination. But if this were as spotless as I expect of London's big-dollar productions, it would loose some of its charm.
+	</p>
+	
+	<p><h2>Limbo: City of Dreams</h2>
+	<i>Royal Conservatoire of Scotland / American Music Theatre Project, Edinburgh Fringe Festival, 11/08/19 </i>
+	<br>The Fringe has some element of luck involved, and - luckily for me - Limbo was more hit than miss. That wasn't to say it was perfect, but its pleasing to see well produced music, no-one trying to make world saving political statements and a cast that looks like they haven't lately developed mental health issues. The production was what might be described as "feel good", with an enjoyable, if somewhat arts-studenty story.</p>
+	
 	<p><h2>Small Island</h2>
 	<i>National Theatre Productions, National Theatre, London, 29/07/2019 </i>
 	<br>A heavy story thoughtfully entwined with well judged humour, such that what could have been a bitter taste is not only palatable, but delicious. The writing is tight, giving the impression that every action and every line of the play was agonised over, having to earn its place in the final cut. The sets were minimal but dynamic, making excellent use of the Olivier's drum revolve and machinery to lift and lower both elements of the set and characters into and out of the scene. And the acting was pleasing and convincing, with credit going to whoever it was responsible for ensuring that accents sounded Jamaican whilst remaining easily understandable. Well written, well produced and very much recommended. </p>
