--- a/artsreview.html
+++ b/artsreview.html
@@ -8,6 +8,11 @@ title: "Arts review"
 
 	<h1>Arts review</h1>
 	
+	<p><h2>Peter Gynt</h2>
+	<i>National Theatre Productions, National Theatre, London, 17/08/2019 </i>
+	<br>James McArdle pretends to be the rowdy Peter Gynt for 3 hours. The play - a modern retelling of Peer Gynt - tells the story of a man trying to embrace the modern ideal of being himself. It's fanciful, cynical and topical, often taking the opportunity to mock our the rich and powerful. Despite the good writing, the adherence to the original Peer Gynt story sometimes causes the play to stumble (although never fall). It makes me wonder what the play could have been achieved had the writers ceased trying to create a Peer Gynt.
+	</p>
+	
 	<p><h2>A Midsummer Night's Dream</h2>
 	<i>Chapterhouse Theatre Company, Pollock House, Glasgow, 15/08/19 </i>
 	<br>For a one evening event, Chapterhouse managed to attract a decent crowd to Pollock house to sit on fold up chairs and picnic rugs. It was fun. The eight person troupe thankfully didn't attempt any modern reimagining of Shakespeare, and made it suitably coarse for the occasion. And it didn't rain. Sure, any of the music played through loudspeakers tended to drown out the unamplified actors and Oberon wasn't as he is in my imagination. But if this were as spotless as I expect of London's big-dollar productions, it would loose some of its charm.
