--- a/artsreview.html
+++ b/artsreview.html
@@ -10,7 +10,7 @@ title: "Arts review"
 	
 	<p><h2>Peter Gynt</h2>
 	<i>National Theatre Productions, National Theatre, London, 17/08/2019 </i>
-	<br>James McArdle pretends to be the rowdy Peter Gynt for 3 hours. The play - a modern retelling of Peer Gynt - tells the story of a man trying to embrace the modern ideal of being himself. It's fanciful, cynical and topical, often taking the opportunity to mock our the rich and powerful. Despite the good writing, the adherence to the original Peer Gynt story sometimes causes the play to stumble (although never fall). It makes me wonder what the play could have been achieved had the writers ceased trying to create a Peer Gynt.
+	<br>James McArdle pretends to be the rowdy Peter Gynt for 3 hours. The play - a modern retelling of Peer Gynt - is the story of a man trying to embrace the modern ideal of being himself. It's fanciful, cynical and topical, often taking the opportunity to mock the rich and powerful. Despite the good writing, the adherence to the original Peer Gynt story sometimes causes the play to stumble (although never fall). It makes me wonder what the play could have been achieved had the writers ceased trying to create a Peer Gynt.
 	</p>
 	
 	<p><h2>A Midsummer Night's Dream</h2>
