--- a/fictionreview.html
+++ b/fictionreview.html
@@ -7,6 +7,8 @@ title: "Book review"
 <section class="content">
 	<h1>Fiction review</h1>
 	
+	<p><b>The Count of Monte Cristo</b> (Alexandre Dumas) Nine-hundred pages of dense text is rather a daunting prospect. But by the hundredth page the book is enjoyable, and by the six-hundredth, its difficult to put down. It is a story of love, betrayal, ascension and revenge. It has the makings of an excellent film were it not for its length, complexity or number of characters. Indeed, the trailers of the Monte Cristo film adaptions seem to take excessive liberties with the book. The story is great fun, but I do have one quibble. Monte Cristo appears to omnipotent and infallible. One simply waits to see what form is success will take.   </p>
+	
 	<p><b>Bedlam</b> (Christopher Brookmyre) The joy of Brookmyre is his ability to insert the elusive triple Red Herring plot device into a book based on the reader's mildly shameful interests - in this case, computer games. Despite on the lookout for the first hint of slippery plot twists, I was none the less taken by surprise. <i>Bedlam</i> isn't quite peak Brookmyre, but it is a good display of what he is capable of writing.</p>
 	
 	<p><b>The Colour of Magic</b> (Terry Pratchett) Both a mockery and a celebration of the Dungeons and Dragons playing type. Set in a fantasy world with magical restrictions as perverse as the laws of physics, Pratchett delivers a story which seems to be largely a vehicle by which he can introduce and then discard entertaining ideas as suits his whim. Enjoyable for those that enjoy Terry Pratchett.</p>
