Evelyn Waugh Complete Stories, The Light Fantastic

--- a/fictionreview.html
+++ b/fictionreview.html
@@ -7,6 +7,10 @@ title: "Book review"
 <section class="content">
 	<h1>Fiction review</h1>
 	
+	<p><b>The Light Fantastic</b> (Terry Pratchett) The sequel to The Colour of Magic doesn't stray far from the known good recipe, but it does indeed stray. The Light Fantastic is pleasingly story driven, whilst keeping the seasoning of uncle jokes of the original. It lacks the novelty of the Colour of Magic, but makes for a fun couple of train journeys none the less. </p>
+	
+	<p><b>(Evelyn Waugh) The Complete Short Stories</b>  The problem with "complete" sets is that they inevitably contain duds. And perhaps the biggest dud of the lot was The Balance - the first story in the book. Perhaps it went over my head. Having set off on the wrong foot, I'll admit that there were several nice stories,  but nice is a long way from unputdownable. And when I have such high expectation of Waugh, that's disappointing. </p>
+	
 	<p><b>The Count of Monte Cristo</b> (Alexandre Dumas) Nine-hundred pages of dense text is rather a daunting prospect. But by the hundredth page the book is enjoyable, and by the six-hundredth, its difficult to put down. It is a story of love, betrayal, ascension and revenge. It has the makings of an excellent film were it not for its length, complexity or number of characters. Indeed, the trailers of the Monte Cristo film adaptions seem to take excessive liberties with the book. The story is great fun, but I do have one quibble. Monte Cristo appears to omnipotent and infallible. One simply waits to see what form is success will take.   </p>
 	
 	<p><b>Bedlam</b> (Christopher Brookmyre) The joy of Brookmyre is his ability to insert the elusive triple Red Herring plot device into a book based on the reader's mildly shameful interests - in this case, computer games. Despite on the lookout for the first hint of slippery plot twists, I was none the less taken by surprise. <i>Bedlam</i> isn't quite peak Brookmyre, but it is a good display of what he is capable of writing.</p>
