Dutchess of Malfi

--- a/artsreview.html
+++ b/artsreview.html
@@ -8,18 +8,23 @@ title: "Arts review"
 
 	<h1>Arts review</h1>
 	
+	<p><h2>The Dutchess of Malfi</h2>
+	<i>Citizens Theatre / Royal Lyceum Theatre Edinburgh, Tramway, Glasgow, 21/09/2019 </i>
+	<br>When something describes itself as 16+ and the naughty bits in the first half are safely PG, you know things are going to get unpleasant. And they really do. I was left twitching, grimacing and questioning my choice of pastime. I can only the hope the cast were given counselling for PTSD. Yes, this production gets a lot of things very very right. There are some misplaced themes about (oddly including a Tarantino inspired one), some rather flat acting and some rather excessive acting. However, give it a week and all I'll remember as I lie in bed, trying to get to sleep, are the bits that made this play truly unpleasant and rather good.
+	</p>
+	
 	<p><h2>Peter Gynt</h2>
 	<i>National Theatre Productions, National Theatre, London, 17/08/2019 </i>
 	<br>James McArdle pretends to be the rowdy Peter Gynt for 3 hours. The play - a modern retelling of Peer Gynt - is the story of a man trying to embrace the modern ideal of being himself. It's fanciful, cynical and topical, often taking the opportunity to mock the rich and powerful. Despite the good writing, the adherence to the original Peer Gynt story sometimes causes the play to stumble (although never fall). It makes me wonder what the play could have been achieved had the writers ceased trying to create a Peer Gynt.
 	</p>
 	
 	<p><h2>A Midsummer Night's Dream</h2>
-	<i>Chapterhouse Theatre Company, Pollock House, Glasgow, 15/08/19 </i>
+	<i>Chapterhouse Theatre Company, Pollock House, Glasgow, 15/08/2019 </i>
 	<br>For a one evening event, Chapterhouse managed to attract a decent crowd to Pollock house to sit on fold up chairs and picnic rugs. It was fun. The eight person troupe thankfully didn't attempt any modern reimagining of Shakespeare, and made it suitably coarse for the occasion. And it didn't rain. Sure, any of the music played through loudspeakers tended to drown out the unamplified actors and Oberon wasn't as he is in my imagination. But if this were as spotless as I expect of London's big-dollar productions, it would loose some of its charm.
 	</p>
 	
 	<p><h2>Limbo: City of Dreams</h2>
-	<i>Royal Conservatoire of Scotland / American Music Theatre Project, Edinburgh Fringe Festival, 11/08/19 </i>
+	<i>Royal Conservatoire of Scotland / American Music Theatre Project, Edinburgh Fringe Festival, 11/08/2019 </i>
 	<br>The Fringe has some element of luck involved, and - luckily for me - Limbo was more hit than miss. That wasn't to say it was perfect, but its pleasing to see well produced music, no-one trying to make world saving political statements and a cast that looks like they haven't lately developed mental health issues. The production was what might be described as "feel good", with an enjoyable, if somewhat arts-studenty story.</p>
 	
 	<p><h2>Small Island</h2>
