--- a/artsreview.html
+++ b/artsreview.html
@@ -8,6 +8,11 @@ title: "Arts review"
 
 	<h1>Arts review</h1>
 	
+	<p><h2>The Crucible</h2>
+	<i>Scottish Ballet, Theatre Royal, Glasgow, 28/09/2019 </i>
+	<br>I wish I could know exactly what Ballet is. The Crucible - a new production, with an original score - really did not feel limited to just dance. But whatever the creative director had been smoking, I want some. The use of the lighting and the set was very original, successfully creating quite a spectacle with apparently simple methods. And that isn't to knock the dancing - the virility, the mania and the sadness were very well communicated. The music was not of the usual ballet variety, and I would not have guessed that it was intended to be danced to. It worked very well however. Not a five star ballet, but I can't help but say positive things.
+	</p>
+	
 	<p><h2>The Dutchess of Malfi</h2>
 	<i>Citizens Theatre / Royal Lyceum Theatre Edinburgh, Tramway, Glasgow, 21/09/2019 </i>
 	<br>When something describes itself as 16+ and the naughty bits in the first half are safely PG, you know things are going to get unpleasant. And they really do. I was left twitching, grimacing and questioning my choice of pastime. I can only the hope the cast were given counselling for PTSD. Yes, this production gets a lot of things very very right. There are some misplaced themes about (oddly including a Tarantino inspired one), some rather flat acting and some rather excessive acting. However, give it a week and all I'll remember as I lie in bed, trying to get to sleep, are the bits that made this play truly unpleasant and rather good.
