--- a/artsreview.html
+++ b/artsreview.html
@@ -8,6 +8,11 @@ title: "Arts review"
 
 	<h1>Arts review</h1>
 	
+	<p><h2>Tosca</h2>
+	<i>Scottish Opera, Theatre Royal, Glasgow, 18/10/2019 </i>
+	<br>I described my first opera - Katya Kabanova - as enjoyable a few months ago. Tosca has helped put it in perspective. Which is to say, Katya Kabanova was an underwhelming introduction to opera, and if future productions could please be more like this production of Tosca I'd be very happy. It had the right mix of humour, tension and (dare I say it) creepy perverted characters to keep things fresh across all three halves. At no point did I feel as if the whole "lets sing everything" went too far. And the music was sufficiently good that at times you forgot that you were listening to it. It was an enjoyable evening.
+	</p>
+	
 	<p><h2>The Crucible</h2>
 	<i>Scottish Ballet, Theatre Royal, Glasgow, 28/09/2019 </i>
 	<br>I wish I could know exactly what Ballet is. The Crucible - a new production, with an original score - really did not feel limited to just dance. But whatever the creative director had been smoking, I want some. The use of the lighting and the set was very original, successfully creating quite a spectacle with apparently simple methods. And that isn't to knock the dancing - the virility, the mania and the sadness were very well communicated. The music was not of the usual ballet variety, and I would not have guessed that it was intended to be danced to. It worked very well however. Not a five star ballet, but I can't help but say positive things.
