--- a/artsreview.html
+++ b/artsreview.html
@@ -8,6 +8,11 @@ title: "Arts review"
 
 	<h1>Arts review</h1>
 	
+	<p><h2>The Mikado</h2>
+	<i>English National Opera, London Coliseum, London, 02/11/2019 </i>
+	<br>The ENO's production is awful in all the best ways. I'm almost ashamed for enjoying the gourmet of un-woke humour, but this cannot solely be blamed on Gilbert & Sullivan. The ENO took it upon themselves to sprinkle additional jokes upon the dry spots, including a series of gags based upon the set's false perspective design. The <i>Little List</i> extracted a few giggles out of the audience at the expense of Westminster, and the music was good (as it should be). I'm inclined to think the ENO's musical abilities are wasted on something such as Gilbert and Sullivan, but if the ENO has a money spinning production it can dust off every so often I don't blame them. £10 is very little money for an enjoyable evening.
+	</p>
+	
 	<p><h2>Tosca</h2>
 	<i>Scottish Opera, Theatre Royal, Glasgow, 18/10/2019 </i>
 	<br>I described my first opera - Katya Kabanova - as enjoyable a few months ago. Tosca has helped put it in perspective. Which is to say, Katya Kabanova was an underwhelming introduction to opera, and if future productions could please be more like this production of Tosca I'd be very happy. It had the right mix of humour, tension and (dare I say it) creepy perverted characters to keep things fresh across all three halves. At no point did I feel as if the whole "lets sing everything" went too far. And the music was sufficiently good that at times you forgot that you were listening to it. It was an enjoyable evening.
