--- a/artsreview.html
+++ b/artsreview.html
@@ -8,6 +8,12 @@ title: "Arts review"
 
 	<h1>Arts review</h1>
 	
+	<p><h2>Three Sisters</h2>
+	<i>National Theatre Productions, National Theatre, London, 27/12/2019</i>
+	<br>The National's Three Sisters, inspired by the Chekhov play of the same name, is set during the Biafran civil war and focuses on the microcosm of a family relationship. In the first couple of acts, tension and strong feeling is balanced by humour. But when the curtain lifts for the second half, dispare has prevailed and the play becomes more tiresome to watch. This lead the final act to feel  superfluous in an already long play. Such a charged setting could many playwrights to temptation, but Inua Ellams scatters the full spectrum political messages into the play, leaving the audience to take away whatever meaning from the play as they desire. Regrettably, some audience members decided to cheer at the most superficial messages. 
+	</p>
+
+	
 	<p><h2>The Mikado</h2>
 	<i>English National Opera, London Coliseum, London, 02/11/2019 </i>
 	<br>The ENO's production is awful in all the best ways. I'm almost ashamed for enjoying the gourmet of un-woke humour, but this cannot solely be blamed on Gilbert & Sullivan. The ENO took it upon themselves to sprinkle additional jokes upon the dry spots, including a series of gags based upon the set's false perspective design. The <i>Little List</i> extracted a few giggles out of the audience at the expense of Westminster, and the music was good (as it should be). I'm inclined to think the ENO's musical abilities are wasted on something such as Gilbert and Sullivan, but if the ENO has a money spinning production it can dust off every so often I don't blame them. £10 is very little money for an enjoyable evening.
