My Brilliant Friend

--- a/artsreview.html
+++ b/artsreview.html
@@ -8,6 +8,11 @@ title: "Arts review"
 
 	<h1>Arts review</h1>
 	
+	<p><h2>My Brilliant Friend</h2>
+	<i>National Theatre Productions & The Rose Theatre Kingston, National Theatre, London, 30/12/2019</i>
+	<br><i>My Brilliant Friend</i> is a two part play that is, I think, best seen entirely in a single day. It is wonderfully stylised. The storytelling is well paced and the transitions fluid, but at times the time jumps can be confusing. This is particularly true at the very beginning of the play where we're introduced to the protagonists as children. Only, because they're played by adults, I initially assumed that they were adults with learning disabilities. Eventually, I caught on to how the story was being told. In the second half, I think it was necessary recollect parts of the first half for everything to make sense. Creatively, the production has highs and (subjectivley) lows. Puppetry was used to excellent effect, but the more vulgar moments didn't feel wholy neccesary. I also think that the standout performance of Ira Mandela Siobhan as Marcello Solara is worth a mention. The quality of his acting was almost concerningly good given his part.
+	</p>
+	
 	<p><h2>Three Sisters</h2>
 	<i>National Theatre Productions, National Theatre, London, 27/12/2019</i>
 	<br>The National's Three Sisters, inspired by the Chekhov play of the same name, is set during the Biafran civil war and focuses on the microcosm of a family relationship. In the first couple of acts, tension and strong feeling is balanced by humour. But when the curtain lifts for the second half, dispare has prevailed and the play becomes more tiresome to watch. This lead the final act to feel  superfluous in an already long play. Such a charged setting could many playwrights to temptation, but Inua Ellams scatters the full spectrum political messages into the play, leaving the audience to take away whatever meaning from the play as they desire. Regrettably, some audience members decided to cheer at the most superficial messages. 
