--- a/artsreview.html
+++ b/artsreview.html
@@ -7,6 +7,11 @@ title: "Arts review"
 <section class="content">
 
 	<h1>Arts review</h1>
+		
+	<p><h2>Copp&eacutelia</h2>
+	<i>The Royal Ballet, The Royal Opera House, London, 31/12/2019</i>
+	<br>A Christmas ballet where a doll appears to come to life? No, not the <i>Nutcracker</i> - something far better. The Royal Ballet's production of <i>Copp&eacutelia</i> is - as far as I know - far from new. But its been reheated for good reason. Its a silly ballet and it knows it, with the Royal ballet being able to show off their comedic abilities. This is illustrated during the second act inside Copp&eacutelius' house. Comparitively, the final act was more about displaying the abilities of the ballerinas and ballerinos. This horse is far from dead, and is worth seeing next time the Royal Ballet decide to flog it.
+	</p>
 	
 	<p><h2>My Brilliant Friend</h2>
 	<i>National Theatre Productions & The Rose Theatre Kingston, National Theatre, London, 30/12/2019</i>
