--- a/fictionreview.html
+++ b/fictionreview.html
@@ -7,6 +7,8 @@ title: "Book review"
 <section class="content">
 	<h1>Fiction review</h1>
 	
+	<p><b>Dune</b> (Frank Herbert) Supposedly, <i>Dune</i> is <i>the</i> classic sci-fi novel. Like <i>Harry Potter</i>, the beauty of the book is that the technicalities of Herbert's world are somewhat irrelevant, existing to serve the story. And its a good, somewhat timeless story. One about a fight against the imperialists for a precious resource hidden in the inhospitable desert. A story where, despite the broad details of the trajectory being fairly clear from early on, the details are enough to keep the reader on their toes. That said, I think I'd prefer another Terry Pratchett.</p>
+	
 	<p><b>The Light Fantastic</b> (Terry Pratchett) The sequel to The Colour of Magic doesn't stray far from the known good recipe, but it does indeed stray. The Light Fantastic is pleasingly story driven, whilst keeping the seasoning of uncle jokes of the original. It lacks the novelty of the Colour of Magic, but makes for a fun couple of train journeys none the less. </p>
 	
 	<p><b>(Evelyn Waugh) The Complete Short Stories</b>  The problem with "complete" sets is that they inevitably contain duds. And perhaps the biggest dud of the lot was The Balance - the first story in the book. Perhaps it went over my head. Having set off on the wrong foot, I'll admit that there were several nice stories,  but nice is a long way from unputdownable. And when I have such high expectation of Waugh, that's disappointing. </p>
