--- a/artsreview.html
+++ b/artsreview.html
@@ -8,6 +8,9 @@ title: "Arts review"
 
 	<h1>Arts review</h1>
 		
+	<p><h2>The Snow Queen</h2><i>Scottish Ballet, Theatre Royal, Glasgow, 11/01/2020</i>
+	<br> <i>The Snow Queen</i> certainly starts strong: clever use of projection leaves less to the somewhat limited storytelling abilities of dance. Thankfully the sets soon become less clever and we get to see more of dancing. Here, Scottish Ballet emphasise group dances above solos, probably too heavily - there were moments at which the mesmerising coordination was broken. Variation in style was good, helped by the complexity of the story. At no point did I find myself bored. However, the complexity of the story was also hard to follow. Musically, credit must be given to the orchestra and particularly the violinist who joined the Gypsy troupe on stage.</p>
+	
 	<p><h2>Copp&eacutelia</h2>
 	<i>The Royal Ballet, The Royal Opera House, London, 31/12/2019</i>
 	<br>A Christmas ballet where a doll appears to come to life? No, not the <i>Nutcracker</i> - something far better. The Royal Ballet's production of <i>Copp&eacutelia</i> is - as far as I know - far from new. But its been reheated for good reason. Its a silly ballet and it knows it, with the Royal ballet being able to show off their comedic abilities. This is illustrated during the second act inside Copp&eacutelius' house. Comparitively, the final act was more about displaying the abilities of the ballerinas and ballerinos. This horse is far from dead, and is worth seeing next time the Royal Ballet decide to flog it.
