North Korea Journal - Michael Palin

--- a/nonfictionreview.html
+++ b/nonfictionreview.html
@@ -7,6 +7,8 @@ title: "Non-fiction review"
 <section class="content">
 	<h1>Non-fiction review</h1>
 
+	<p><b>North Korea Journal</b> (Michael Palin) That the 170 page book can be read in just a few hours is a compliment - Palin knows not to spread butter too thin over too much bread. </p>
+	
 	<p><b>This is Going to Hurt</b> (Adam Kay) Funny, but having heard that Dr. Kay isn't terribly nice in person, I officially dislike the book. </p>
 	
 	<p><b>The End of Alchemy</b> (Mervyn King) Synopsys: central bankers cannot predict the future and people and institutions follow the incentives given to them by the system within which they are placed. </p>
