End of alchemy spelling mistake

--- a/nonfictionreview.html
+++ b/nonfictionreview.html
@@ -11,7 +11,7 @@ title: "Non-fiction review"
 	
 	<p><b>This is Going to Hurt</b> (Adam Kay) Funny, but having heard that Dr. Kay isn't terribly nice in person, I officially dislike the book. </p>
 	
-	<p><b>The End of Alchemy</b> (Mervyn King) Synopsys: central bankers cannot predict the future and people and institutions follow the incentives given to them by the system within which they are placed. </p>
+	<p><b>The End of Alchemy</b> (Mervyn King) Synopsis: central bankers cannot predict the future and people and institutions follow the incentives given to them by the system within which they are placed. </p>
 	
 	<p><b>Women and Power: A Manifesto</b> (Mary Beard) Missing the manifesto? Really a list of grievances. </p>
 	
