Onegin / Lucretia / God of Carnage

--- a/artsreview.html
+++ b/artsreview.html
@@ -7,13 +7,28 @@ title: "Arts review"
 <section class="content">
 
 	<h1>Arts review</h1>
+	
+	<p><h2>God of Carnage</h2>
+	<i>Theatre Royal Bath Productions, Theatre Royal, Glasgow, 27/01/2020</i>
+	<br>A friend asked me if there would be ice cream in the interval. Of course, I said - how else is a theatre supposed to make money? I was wrong. There was no interval, and for good reason: <i>God of Carnage</i> is a play that having worked up its momentum, daren't stop. To build up the continuous stream  of absurdity and comic tension requires skill. To try and turn that tap off and then on again would have been a mistake. 
+	</p>
+	
+	<p><h2>The Rape of Lucretia</h2>
+	<i>Royal Conservatoire of Scotland, Glasgow, 25/01/2020</i>
+	<br>Britten's <i>The Rape of Lucretia</i> is not an Opera to enjoy. The overwhelming negativity combined with the intimate and competent production made it a stressful experience.
+	</p>
+	
+	<p><h2>Onegin</h2>
+	<i>The Royal Ballet, The Royal Opera House, London, 18/01/2020</i>
+	<br><i>Onegin</i> (pronounced "On-ay-ghin") is a tale how a young man rejects the love of a young woman only to realise his mistake years later at which point she rejects him. Muted colours give the appearance of a moving painting to the ballet. The dancing carries the emotional content of the ballet. Something so beautiful, so sad as the protagonist Tatyana is rare to see. The contrast between this and Eugine Onegin's energy, aggression and flamboyance is what makes the ballet work. 
+	</p>
 		
 	<p><h2>The Snow Queen</h2><i>Scottish Ballet, Theatre Royal, Glasgow, 11/01/2020</i>
 	<br> <i>The Snow Queen</i> certainly starts strong: clever use of projection leaves less to the somewhat limited storytelling abilities of dance. Thankfully the sets soon become less clever and we get to see more of dancing. Here, Scottish Ballet emphasise group dances above solos, probably too heavily - there were moments at which the mesmerising coordination was broken. Variation in style was good, helped by the complexity of the story. At no point did I find myself bored. However, the complexity of the story was also hard to follow. Musically, credit must be given to the orchestra and particularly the violinist who joined the Gypsy troupe on stage.</p>
 	
 	<p><h2>Copp&eacutelia</h2>
 	<i>The Royal Ballet, The Royal Opera House, London, 31/12/2019</i>
-	<br>A Christmas ballet where a doll appears to come to life? No, not the <i>Nutcracker</i> - something far better. The Royal Ballet's production of <i>Copp&eacutelia</i> is - as far as I know - far from new. But its been reheated for good reason. Its a silly ballet and it knows it, with the Royal ballet being able to show off their comedic abilities. This is illustrated during the second act inside Copp&eacutelius' house. Comparitively, the final act was more about displaying the abilities of the ballerinas and ballerinos. This horse is far from dead, and is worth seeing next time the Royal Ballet decide to flog it.
+	<br>A Christmas ballet where a doll appears to come to life? No, not the <i>Nutcracker</i> - something far better. The Royal Ballet's production of <i>Copp&eacutelia</i> is - as far as I know - far from new. But its been reheated for good reason. Its a silly ballet and it knows it, with the Royal ballet being able to show off their comedic abilities. This is illustrated during the second act inside Copp&eacutelius' house. Comparatively, the final act was more about displaying the abilities of the ballerinas and ballerinos. This horse is far from dead, and is worth seeing next time the Royal Ballet decide to flog it.
 	</p>
 	
 	<p><h2>My Brilliant Friend</h2>
