Nixon in China / Carmen

--- a/artsreview.html
+++ b/artsreview.html
@@ -8,6 +8,16 @@ title: "Arts review"
 
 	<h1>Arts review</h1>
 	
+	<p><h2>Carmen</h2>
+	<i>English National Opera, London Coliseum, 22/02/2020</i>
+	<br>Famous operas like <i>Carmen</i> lead to high expectations which are often hard to live up to. I was not disappointed however, with the ENO providing all the immorality and eroticism I was looking for, played out not only on stage but musically too. My only disappointment is the opera's ending, which simply fails to follow the big numbers from earlier on.
+	</p>
+	
+	<p><h2>Nixon in China</h2>
+	<i>Scottish Opera / The Royal Danish Theatre / Teatro Real Madrid, Theatre Royal, Glasgow, 20/02/2020</i>
+	<br>First lets talk music: <i>Nixon in China</i> is dominated by the droning of the oversized saxaphone section. It wasn't lacking in personality, but that doesn't mean I want to listen to it again. Instead, the opera depends upon a set of caricatures, extensive  humour (when it didn't go over my head), as well as capitalising on its own unusualness. A high quality production of an unusual and funny, but musically disappointing opera.
+	</p>
+	
 	<p><h2>God of Carnage</h2>
 	<i>Theatre Royal Bath Productions, Theatre Royal, Glasgow, 27/01/2020</i>
 	<br>A friend asked me if there would be ice cream in the interval. Of course, I said - how else is a theatre supposed to make money? I was wrong. There was no interval, and for good reason: <i>God of Carnage</i> is a play that having worked up its momentum, daren't stop. To build up the continuous stream  of absurdity and comic tension requires skill. To try and turn that tap off and then on again would have been a mistake. 
