--- a/nonfictionreview.html
+++ b/nonfictionreview.html
@@ -6,6 +6,8 @@ title: "Non-fiction review"
 <!-- You can edit this whole page, remove it, or use it as basis for any non-post pages you have. -->
 <section class="content">
 	<h1>Non-fiction review</h1>
+	
+	<p><b>Yes: The Radical Case for Scottish Independence</b> (James Foley and Peter Ramand) Entertainingly written, this book show's off the authors' visceral dislike of neoliberalism and capitalism. The arguments are often non-sensical and their opinions of the status-quo delusional. Perhaps my favourite quote is "An independent treasury, no matter how incompetent, would make better use of Scotland's offshore resources." Confusingly, the book doesn't even seem to try and justify Scottish independence, instead aligning Scots politics with British politics.  </p>
 
 	<p><b>North Korea Journal</b> (Michael Palin) That the 170 page book can be read in just a few hours is a compliment - Palin knows not to spread butter too thin over too much bread. </p>
 	
